# webgpu-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3pp/tinyobjloader/: tiny_obj_loader.h
environment_processing/: CMakeLists.txt  environment_processor.cpp
model_processing/: CMakeLists.txt  model_maker.cpp
resources/models/: 01___Def.mats  07___Def.mats  Mesh51.001_0.geom  Mesh51.001_1.geom  b1_battle_droid.mtl  b1_battle_droid.obj_toc.txt  character.mtl  sketchfab links.txt
resources/models/BuzzDroid/: Box038.001_meshId1_name_M_Buzz_LowerBody_0.geom  Box038_meshId0_name_M_Buzz_UpperBody_0.geom  BuzzDroid.h  BuzzDroid.mtl  BuzzDroid.obj_toc.txt  BuzzDroid.obj_toc_geometry.txt  BuzzDroid.obj_toc_material.txt  M_Buzz_LowerBody.mats  M_Buzz_UpperBody.mats
resources/models/TantiveIV/: BackTube_BackTube_ScratchedMetalDark_0.geom  BackTube_BackTube_ScratchedMetal_0.geom  BlueEngineGlow.mats  CentralSectionExtra_CentralSectionExtra_ScratchedMetal_0.geom  Default.mats  DualTurboLaserLowerBase_DualTurboLaserLowerBase_ScratchedMetalDark_0.geom  DualTurboLaserLowerBase_DualTurboLaserLowerBase_ScratchedMetal_0.geom  DualTurboLaserLowerSection_DualTuboLaserLowerSection_ScratchedMetal_0.geom  DualTurboLaserLower_DualTurboLaserLower_ScratchedMetalDark_0.geom  DualTurboLaserUpperBase_Cylinder.017_ScratchedMetalDark_0.geom  DualTurboLaserUpperBase_Cylinder.017_ScratchedMetal_0.geom  DualTurboLaserUpperSection_Cube.013_ScratchedMetal_0.geom  DualTurboLaserUpper_Cylinder.018_ScratchedMetalDark_0.geom  Greebles1_Greebles1_ScratchedMetalDark_0.geom  Greebles1_Greebles1_ScratchedMetal_0.geom  Greebles2_Greebles2_ReflectiveGlass_0.geom  Greebles2_Greebles2_ScratchedMetalDark_0.geom  Greebles2_Greebles2_ScratchedMetal_0.geom  Greebles3_Greebles3_ScratchedMetalDark_0.geom  Greebles3_Greebles3_ScratchedMetal_0.geom  Greebles4_Greebles4_ScratchedMetal_0.geom  Greebles5_Greebles5_ScratchedMetal_0.geom  Hatch_Hatch_ScratchedMetal_0.geom  Head_Head_ScratchedMetal_0.geom  HullPlates_HullPlates_ScratchedMetalDark_0.geom  HullPlates_HullPlates_ScratchedMetalRed_0.geom  HullPlates_HullPlates_ScratchedMetal_0.geom  LifeCapsules_LifeCapsules_ScratchedMetal_0.geom  LowerSensorArray_LowerSensorArray_ScratchedMetal_0.geom  LowerWingsHullPlates_LowerWIngsHullPlates_ScratchedMetal_0.geom  LowerWings_LowerWings_ScratchedMetal_0.geom  MainStructure_MainStructure_ScratchedMetal_0.geom  MidEnginesHolder_MidEnginesHolder_ScratchedMetal_0.geom  MidEnginesHullPlates_MidEnginesHullPlates_ScratchedMetal_0.geom  MidEnginesInnerSides_MidEnginesInnerSides_ScratchedMetal_0.geom  MidEngines_MidEngines_BlueEngineGlow_0.geom  MidEngines_MidEngines_ScratchedMetalDark_0.geom  MidEngines_MidEngines_ScratchedMetal_0.geom  MidSection_MidSection_ScratchedMetalDark_0.geom  MidSection_MidSection_ScratchedMetal_0.geom  (+27 more)
resources/models/b1_battle_droid/: 01___Def.mats  07___Def.mats  Mesh51.001_0.geom  Mesh51.001_1.geom  b1_battle_droid.mtl  b1_battle_droid.obj_toc.txt  b1_battle_droid.obj_toc_geometry.txt  b1_battle_droid.obj_toc_material.txt
resources/models/jedi_starfighter/: jedi_starfighter.mtl  jedi_starfighter.obj_toc.txt  jedi_starfighter.obj_toc_geometry.txt  jedi_starfighter.obj_toc_material.txt  jsf_auxMat.mats  jsf_mainMat.mats
resources/models/thranta/: Thranta-class.mtl  Thranta-class.obj_toc.txt  Thranta-class.obj_toc_geometry.txt  Thranta.h  (+11 more)
utils/: geomIo.h  matsIo.h
webgpu-wasm/: CMakeLists.txt  custom_shell.html
webgpu-wasm/src/: Application.cpp  Application.h  ModelLoader.cpp  ModelLoader.h  StarWarsScene.h  main.cpp
webgpu-wasm/src/Renderer/: Lightmap.cpp  Lightmap.h  Material.cpp  Material.h  MaterialSystem.cpp  MaterialSystem.h  PBRMaterial.cpp  PathTracer.cpp  PathTracer.h  Renderer.cpp  Renderer.h  TextureSystem.cpp  TextureSystem.h  TriangleMesh.cpp  TriangleMesh.h
webgpu-wasm/src/Renderer/Geometry/: GeometrySystem.cpp  GeometrySystem.h  Part.cpp  Part.h  TriangleMesh.cpp  TriangleMesh.h
webgpu-wasm/src/Renderer/Pipelines/: CubemapBackgroundPipeline.cpp  CubemapBackgroundPipeline.h  CubemapShaders.h  CubemapVizualizationPipeline.cpp  CubemapVizualizationPipeline.h  PBRRenderPipeline.cpp  PBRRenderPipeline.h  PBRShaders.h  PathTracingPipeline.cpp  PathTracingPipeline.h  PresentPipeline.cpp  PresentPipeline.h  PresentShader.h  ProceduralPipeline.h  RenderPipeline.cpp  RenderPipeline.h  TestComputePipeline.cpp  TestComputePipeline.h
webgpu-wasm/src/Renderer/Pipelines/Procedural/: NoisePipeline.cpp  NoisePipeline.h
webgpu-wasm/src/Renderer/PreProcessors/: ConvolutionShaders.h  CubemapGenerationPipeline.cpp  CubemapGenerationPipeline.h  CubemapGenerationShaders.h  LightmapProcessor.cpp  LightmapProcessor.h
webgpu-wasm/src/Renderer/WebGPU/: ComputePipeline.cpp  ComputePipeline.h  TextureUtils.h  wgpuBindGroup.cpp  wgpuBindGroup.h  wgpuBuffer.cpp  wgpuBuffer.h  wgpuCubemap.cpp  wgpuCubemap.h  wgpuDevice.cpp  wgpuDevice.h  wgpuIndexBuffer.cpp  wgpuIndexBuffer.h  wgpuPipeline.cpp  wgpuPipeline.h  wgpuSampler.cpp  wgpuSampler.h  wgpuShader.cpp  wgpuShader.h  wgpuSwapChain.cpp  wgpuSwapChain.h  wgpuTexture.cpp  wgpuTexture.h  wgpuUniformBuffer.cpp  wgpuUniformBuffer.h  wgpuVertexBuffer.cpp  wgpuVertexBuffer.h
webgpu-wasm/src/Scene/: ECS.cpp  ECS.h  Environment.cpp  Environment.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneHierarchy.cpp  SceneHierarchy.h  TriangleMesh.h
webgpu-wasm/src/Scene/SceneUtils/: B1BattleDroid.h  BuzzDroid.h  JediStarfighter.h  Plane.h  PongKrell.h  TantiveIV.h  Thranta.h
webgpu-wasm/src/Tasks/: ITask.h
webgpu-wasm/src/Utils/: UniformStructs.h
